# coding_challenge

wc/: CMakeLists.txt  FileProperties.cpp  FileProperties.h  wc.cpp  wc.h
